config/eck-stack/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    argocd.argoproj.io/sync-wave: "2"
  name: kibana-ingress
  namespace: elastic-stack
spec:
  rules:
  - host: kibana.schreibubi.de
    http:
      paths:
      - backend:
          service:
            name: eck-stack-eck-kibana-kb-http
            port:
              number: 5601
        path: /
        pathType: ImplementationSpecific
